<resources>
    <string name="app_name">AwesomeChat</string>
    <string name="txt_ban_be">Bạn bè</string>
    <string name="txt_search_message">Tìm kiếm tin nhắn</string>
    <string name="txt_register">Đăng ký</string>
    <string name="txt_user_name">HỌ VÀ TÊN</string>
    <string name="txt_your_name">yourname</string>
    <string name="txt_email">EMAIL</string>
    <string name="edt_yourname">yourname@gmail.com</string>
    <string name="txt_mat_khau">MẬT KHẨU</string>
    <string name="edt_pass">********</string>
    <string name="txt_toi_dong_y">Tôi đồng ý với các</string>
    <string name="txt_chinh_sach"> chính sách</string>
    <string name="txt_va">và</string>
    <string name="txt_dieu_khoan">điều khoản</string>
    <string name="txt_dang_ky">ĐĂNG KÝ</string>
    <string name="txt_da_co_tk">Đã có tài khoản?</string>
    <string name="txt_login_now">Đăng nhập ngay</string>
    <string name="txt_awesome">Awesome</string>
    <string name="txt_chat">chat</string>
    <string name="txt_time">10:00</string>
    <string name="txt_accept">Đồng ý</string>
    <string name="txt_cancel">Hủy</string>
    <string name="txt_add_friend">Kết bạn</string>
    <string name="txt_trai_nghiem">Trải nghiệm Awesome chat</string>
    <string name="txt_login">Đăng nhập</string>
    <string name="txt_forgot_pass">Quên mật khẩu?</string>
    <string name="txt_dont_have_tk">Chưa có tài khoản?</string>
    <string name="txt_register_now">Đăng ký ngay</string>
    <string name="txt_enter_message">Nhập tin nhắn</string>
    <string name="txt_message">Tin nhắn</string>
    <string name="txt_awesome_chat">Awesome Chat</string>
    <string name="txt_awesomechat_gmail">awesomechat@gmail.com</string>
    <string name="txt_ngon_ngu">Ngôn ngữ</string>
    <string name="txt_tieng_viet">Tiếng Việt</string>
    <string name="txt_thong_bao">Thông báo</string>
    <string name="txt_version_app">Phiên bản ứng dụng</string>
    <string name="version_1_0_0">1.0.0</string>
    <string name="txt_logout">Đăng xuất</string>
    <string name="txt_save">Lưu</string>
    <string name="txt_edit_profile">Chỉnh sửa thông tin</string>
    <string name="txt_09_09_1999">09/09/1999</string>
    <string name="txt_date">NGÀY SINH</string>
    <string name="txt_phone">0123456789</string>
    <string name="txt_phone_number">SỐ ĐIỆN THOẠI</string>
    <string name="txt_not_network">Kết nối mạng không ổn định</string>
</resources>