<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_marginStart="@dimen/d_24"
        android:layout_marginTop="@dimen/d_64"
        android:src="@drawable/ic_mail_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/d_6"
        android:textSize="@dimen/txt_24"
        android:layout_marginStart="@dimen/d_24"
        android:fontFamily="sans-serif"
        android:textColor="@color/black"
        android:text="@string/txt_trai_nghiem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginTop="@dimen/d_16"
        android:textSize="@dimen/txt_24"
        android:layout_marginStart="@dimen/d_24"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/color_blue_txt"
        android:text="@string/txt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/gray"
        android:textSize="@dimen/txt_16"
        android:layout_marginTop="@dimen/d_40"
        android:layout_marginStart="@dimen/d_24"
        android:text="@string/txt_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_your_email"
            android:textColor="@color/color_gray_edt"
            android:layout_marginEnd="@dimen/d_24"
            android:textSize="@dimen/txt_20"
            android:layout_marginTop="@dimen/d_6"
            android:layout_marginStart="@dimen/d_24"
            android:layout_width="match_parent"
            android:hint="@string/edt_yourname"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="@dimen/d_20"
            android:layout_marginEnd="@dimen/d_24"
            android:layout_gravity="top|end"
            android:src="@drawable/ic_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/gray"
        android:textSize="@dimen/txt_16"
        android:layout_marginTop="20dp"
        android:layout_marginStart="24dp"
        android:text="@string/txt_mat_khau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_your_password"
            android:textColor="@color/color_gray_edt"
            android:layout_marginEnd="@dimen/d_24"
            android:textSize="@dimen/txt_24"
            android:layout_marginTop="@dimen/d_6"
            android:layout_marginStart="@dimen/d_24"
            android:layout_width="match_parent"
            android:hint="@string/edt_pass"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_marginTop="@dimen/d_20"
            android:layout_marginEnd="@dimen/d_24"
            android:layout_gravity="top|end"
            android:src="@drawable/ic_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_marginEnd="@dimen/d_24"
        android:layout_marginTop="@dimen/d_10"
        android:textSize="@dimen/txt_14"
        android:layout_gravity="end"
        android:fontFamily="sans-serif-medium"
        android:textColor="@color/color_blue_txt"
        android:text="@string/txt_forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_login"
        android:layout_marginHorizontal="@dimen/d_24"
        android:layout_marginTop="@dimen/d_24"
        android:gravity="center"
        android:padding="@dimen/d_16"
        android:textSize="@dimen/txt_18"
        android:text="@string/txt_login"
        android:textColor="@color/white"
        android:layout_width="match_parent"
        android:background="@drawable/custom_button_login"
        android:layout_height="wrap_content"/>
    <TableRow
        android:layout_marginTop="@dimen/d_90"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatTextView
            android:textSize="@dimen/txt_14"
            android:layout_gravity="end"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/gray"
            android:text="@string/txt_dont_have_tk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_register_now"
            android:layout_marginStart="@dimen/d_6"
            android:textSize="@dimen/txt_14"
            android:layout_gravity="end"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/color_blue_txt"
            android:text="@string/txt_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </TableRow>
</LinearLayout>
</layout>