<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/appCompatImageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_home_message" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ic_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/d_12"
            android:layout_marginTop="@dimen/d_40"
            android:src="@drawable/ic_back"
            android:text="@string/txt_message"
            android:tint="@color/white"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_marginTop="@dimen/d_40"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:text="@string/txt_edit_profile"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_20"
            android:fontFamily="sans-serif-medium" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/d_40"
            android:layout_height="wrap_content"
            android:text="@string/txt_save"
            android:layout_gravity="end"
            android:layout_marginEnd="@dimen/d_12"
            android:fontFamily="sans-serif-medium"
            android:textSize="@dimen/txt_18"
            android:textColor="@color/white" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="@dimen/d_120"
            android:id="@+id/constraint_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_chat_home"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_profile"
                android:layout_marginTop="@dimen/d_40"
                android:layout_width="@dimen/d_142"
                android:layout_height="@dimen/d_142"
                android:src="@drawable/ic_avatar"
                app:civ_border_color="@color/gray"
                app:civ_border_width="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_camera"
                android:layout_marginBottom="-16dp"
                android:layout_marginEnd="-10dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
                app:layout_constraintEnd_toEndOf="@+id/iv_profile" />

            <FrameLayout
                android:id="@+id/frame_edit_name"
                android:layout_marginEnd="@dimen/d_24"
                android:layout_marginStart="@dimen/d_24"
                android:layout_marginTop="@dimen/d_40"
                app:layout_constraintTop_toBottomOf="@+id/iv_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/txt_user_name"
                    android:textSize="@dimen/txt_14"
                    android:textColor="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_name"
                    android:hint="@string/txt_awesome_chat"
                    android:textSize="@dimen/txt_18"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="@dimen/d_24"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/d_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginTop="@dimen/d_24"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:background="@color/gray"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </FrameLayout>

            <FrameLayout
                android:id="@+id/frame_edit_phone"
                android:layout_marginEnd="@dimen/d_24"
                android:layout_marginStart="@dimen/d_24"
                android:layout_marginTop="@dimen/d_24"
                app:layout_constraintTop_toBottomOf="@+id/frame_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/txt_phone_number"
                    android:textSize="@dimen/txt_14"
                    android:textColor="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edt_phone"
                    android:hint="@string/txt_phone"
                    android:textSize="@dimen/txt_18"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="@dimen/d_24"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/d_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginTop="@dimen/d_24"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:background="@color/gray"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </FrameLayout>
            <FrameLayout
                android:id="@+id/frame_edit_date"
                android:layout_marginEnd="@dimen/d_24"
                android:layout_marginStart="@dimen/d_24"
                android:layout_marginTop="@dimen/d_24"
                app:layout_constraintTop_toBottomOf="@+id/frame_edit_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent">

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/txt_date"
                    android:textSize="@dimen/txt_14"
                    android:textColor="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatEditText
                    android:hint="@string/txt_09_09_1999"
                    android:id="@+id/edt_date"
                    android:textSize="@dimen/txt_18"
                    android:background="@android:color/transparent"
                    android:layout_marginTop="@dimen/d_24"
                    android:textColorHint="@color/black"
                    android:textColor="@color/black"
                    android:layout_marginBottom="@dimen/d_10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_marginTop="@dimen/d_24"
                    android:layout_gravity="end"
                    android:src="@drawable/ic_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <View
                    android:background="@color/gray"
                    android:layout_gravity="bottom"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"/>
            </FrameLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>

</layout>