<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_avatar_page"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <LinearLayout
            android:layout_marginTop="@dimen/d_280"
            android:id="@+id/constraint_profile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_chat_home"
            android:orientation="vertical">

            <FrameLayout
                android:id="@+id/frame_avatar_page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_16"
                android:layout_marginTop="@dimen/d_24"
                android:layout_marginEnd="@dimen/d_16">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_profile"
                    android:layout_width="@dimen/d_56"
                    android:layout_height="@dimen/d_56"
                    android:src="@drawable/ic_avatar_small"
                    app:layout_constraintStart_toEndOf="@+id/iv_back"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_name"
                    android:text="@string/txt_awesome_chat"
                    android:textSize="@dimen/txt_18"
                    android:fontFamily="sans-serif-medium"
                    android:layout_marginStart="@dimen/d_64"
                    android:layout_gravity="start|top"
                    android:textColor="@color/black"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_gmail"
                    android:text="@string/txt_awesomechat_gmail"
                    android:textSize="@dimen/txt_16"
                    android:fontFamily="sans-serif"
                    android:layout_marginStart="@dimen/d_64"
                    android:layout_gravity="start|top"
                    android:textColor="@color/gray"
                    android:layout_marginTop="@dimen/d_24"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_to_edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/d_24"
                    android:src="@drawable/ic_edit" />

            </FrameLayout>
            <FrameLayout
                android:id="@+id/frame_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_16"
                android:layout_marginTop="@dimen/d_24"
                android:layout_marginEnd="@dimen/d_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frame_avatar_page">


                <androidx.appcompat.widget.AppCompatImageView
                    android:src="@drawable/ic_language"
                    android:layout_gravity="start|center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/txt_ngon_ngu"
                    android:textSize="@dimen/txt_18"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="start|center"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/d_40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/txt_tieng_viet"
                    android:textSize="@dimen/txt_18"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="end|center"
                    android:textColor="@color/gray"
                    android:layout_marginEnd="@dimen/d_20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:src="@drawable/ic_next" />

            </FrameLayout>
            <FrameLayout
                android:id="@+id/frame_notice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_16"
                android:layout_marginTop="@dimen/d_24"
                android:layout_marginEnd="@dimen/d_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frame_language">


                <androidx.appcompat.widget.AppCompatImageView
                    android:src="@drawable/ic_notification"
                    android:layout_gravity="start|center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/txt_thong_bao"
                    android:textSize="@dimen/txt_18"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="start|center"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/d_40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center"
                    android:src="@drawable/ic_next" />

            </FrameLayout>
            <FrameLayout
                android:id="@+id/frame_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_16"
                android:layout_marginTop="@dimen/d_24"
                android:layout_marginEnd="@dimen/d_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frame_notice">


                <androidx.appcompat.widget.AppCompatImageView
                    android:src="@drawable/ic_version"
                    android:layout_gravity="start|center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:text="@string/txt_version_app"
                    android:textSize="@dimen/txt_18"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="start|center"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/d_40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/txt_18"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/gray"
                    android:layout_gravity="end|center"
                    android:text="@string/version_1_0_0" />

            </FrameLayout>
            <FrameLayout
                android:id="@+id/frame_logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/d_16"
                android:layout_marginTop="@dimen/d_24"
                android:layout_marginEnd="@dimen/d_16"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/frame_version">


                <androidx.appcompat.widget.AppCompatImageView
                    android:src="@drawable/ic_logout"
                    android:layout_gravity="start|center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_logout"
                    android:text="@string/txt_logout"
                    android:textSize="@dimen/txt_18"
                    android:fontFamily="sans-serif"
                    android:layout_gravity="start|center"
                    android:textColor="@color/red"
                    android:layout_marginStart="@dimen/d_40"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </FrameLayout>

        </LinearLayout>
    </FrameLayout>
</layout>